fix: overflow on body

--- a/front/src/styles/global.scss
+++ b/front/src/styles/global.scss
@@ -14,6 +14,7 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: hidden;
 }
 
 app-root {
